--- a/src/components/Home/CategoryList/CategoryList.css
+++ b/src/components/Home/CategoryList/CategoryList.css
@@ -16,7 +16,18 @@
 
 @media screen and (max-width: 750px) {
   .CategoryList {
-    grid-template-columns: repeat(1, 1fr);
-    padding: 0 0 30px 0;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+    padding: 15px;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .CategoryList {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    padding: 10px;
+    width: 100%;
   }
 }
